# Stoykov

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
data/: crew.txt
diploma/: main.py  my_main.py  test_main.py
src/staff_visits/: main.py  main_flask.py
src/staff_visits/templates/: person_profile.html  persons.html
tests/: test_main.py
