[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "staff_visits"
version = "1.0.1"
authors = [
  { name="Stoykov Rostislav", email="7041106@gmail.com" },
]
description = "Making dictionary stuff entrance / exit"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rostis2012/Stoykov.git"
"Bug Tracker" = "https://github.com/rostis2012/Stoykov/issues"